Add email support to /addperson using direct PCO API access

--- a/pco-ai-service/.env.example
+++ b/pco-ai-service/.env.example
@@ -13,4 +13,8 @@ OLLAMA_API_URL=http://localhost:11434/api/generate
 OLLAMA_MODEL=llama3.1:8b
 
 # Optional: Timeout settings
+# PCO API Credentials (for direct API access in interactive chat)
+# Get these from https://api.planningcenteronline.com/oauth/applications
+PCO_APP_ID=your_app_id_here
+PCO_SECRET=your_secret_here
 REQUEST_TIMEOUT=120
